# dual_arm

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/pkgconfig/: bmm3_control.pc  dual_control.pc  dual_description.pc  dual_gazebo.pc
devel/share/bmm3_control/cmake/: bmm3_controlConfig.cmake
devel/share/dual_control/cmake/: dual_controlConfig.cmake
devel/share/dual_description/cmake/: dual_descriptionConfig.cmake
devel/share/dual_gazebo/cmake/: dual_gazeboConfig.cmake
src/dual_control/: CMakeLists.txt  package.xml
src/dual_control/config/: control.yaml  dual_arm_gazebo_control.yaml  dual_arm_gazebo_joint_position.yaml  dual_arm_gazebo_joint_states.yaml  localization.yaml  trajectory_control.yaml
src/dual_control/launch/: control.launch  dual_arm_gazebo_control.launch  dual_arm_gazebo_states.launch  dual_arm_world.launch
src/dual_control/scripts/: pick_and_place.py
src/dual_control/worlds/: grasping.world
src/dual_description/: CMakeLists.txt
src/dual_description/launch/: description.launch
src/dual_description/meshes/ALLEGRO_LEFT_DAE/: link_13_0_left.dae  link_14_0_left.dae  link_15_0_left.dae
src/dual_description/meshes/ALLEGRO_RIGHT_DAE/: link_13_0_right.dae  link_14_0_right.dae  link_15_0_right.dae
src/dual_description/meshes/BMM3_DAE/: AH_support.dae  can.dae  cylinder.dae  cylinder.stl  structure.dae
src/dual_description/urdf/: bmm3.urdf.xacro  dual_ur5.urdf.xacro  ur5_left.urdf.xacro  ur5_right.urdf.xacro  wheel.urdf.xacro
src/dual_gazebo/: CMakeLists.txt
src/dual_gazebo/launch/: dual_empty_world.launch  spawn_dual.launch
